--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
   background-color: #111619;
   font: 16px/24px PlayfairDisplay-Regular, sans-serif;
   margin: 0 auto;
+  min-width: 1820px;
 }
 
 .content {
@@ -566,12 +567,12 @@ body {
 }
 
 .services .list-of-services {
-  display: flex;
   list-style: none;
   margin: 0 0 75px 99px;
   padding: 0;
   column-gap: 20px;
   text-align: start;
+  display: flex;
 }
 
 .list-of-services li {
